[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "OpenEnv environment for email triage agent evaluation"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai==1.25.0",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.openenv]
name = "email-triage-openenv"
version = "1.0.0"
entry_point = "server:app"
